--- a/package.json
+++ b/package.json
@@ -3,18 +3,54 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mantine/carousel": "^6.0.0",
+    "@mantine/core": "^6.0.0",
+    "@mantine/dates": "^6.0.0",
+    "@mantine/dropzone": "^6.0.0",
+    "@mantine/form": "^6.0.0",
+    "@mantine/hooks": "^6.0.0",
+    "@mantine/modals": "^6.0.0",
+    "@mantine/notifications": "^6.0.0",
+    "@mantine/nprogress": "^6.0.0",
+    "@mantine/prism": "^6.0.0",
+    "@mantine/spotlight": "^6.0.0",
+    "@mantine/tiptap": "^6.0.0",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@tabler/icons-react": "^2.7.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.12",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@tiptap/extension-link": "^2.0.0-beta.220",
+    "@tiptap/react": "^2.0.0-beta.220",
+    "@tiptap/starter-kit": "^2.0.0-beta.220",
+    "@types/jest": "^29.4.0",
+    "@types/jsdom": "^21.1.0",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/redux-batched-subscribe": "^0.1.4",
+    "@types/redux-logger": "^3.0.9",
+    "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
+    "embla-carousel-autoplay": "^7.0.9",
+    "embla-carousel-react": "^7.0.9",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lodash": "^0.1.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "redux-batched-subscribe": "^0.1.6",
+    "redux-logger": "^3.0.6",
+    "stylis": "^4.1.3",
+    "stylis-plugin-rtl": "^2.1.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.1.1",
+    "zod": "^3.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
