--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux-logger": "^3.0.6",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1",
+    "superjson": "^1.12.2",
     "typescript": "^4.9.5",
     "web-vitals": "^3.1.1",
     "zod": "^3.21.0"
