--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "embla-carousel-autoplay": "^7.0.9",
     "embla-carousel-react": "^7.0.9",
     "lodash": "^4.17.21",
+    "mathjs": "^11.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lodash": "^0.1.2",
